apps/vpn-proxy/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-proxy
  labels:
    routed-gateway: "true"
